--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body style=" background-image:url('photo_2023-06-19_21-36-40.jpg');
 "  class=" bg-white  p-4 sm:text-1xl md:text-2xl lg:text-2xl xl:text-2xl p-2 sm:p-2 md:p-4 lg:p-8  w-full h-full  content-center">
-<div style=" background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6Rod6Zv5NUMyCPUzTpMMcA8Ib4LlDQL6w4g&usqp=CAU') "  class="">   <a href="home.html" class="text-2xl p-1.5 sm:text-2xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl
+<div style=" background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6Rod6Zv5NUMyCPUzTpMMcA8Ib4LlDQL6w4g&usqp=CAU') "  class="">   <a href="index.html" class="text-2xl p-1.5 sm:text-2xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl
     sm:p-2 md:p-6 lg:p-16  text-cyan-300 ">home</a>
 <a href="unit1.html" class="text-2xl p-1.5 sm:text-2xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl
     sm:p-2 md:p-6 lg:p-16  text-cyan-300 ">unit 1</a>
