--- a/unit3.html
+++ b/unit3.html
@@ -17,7 +17,7 @@
     style=" background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-klsTxr5wP861okbqE3WVxlWzrFSHm8ncqw&usqp=CAU') "
     class="text-white  p-4 sm:text-1xl md:text-2xl lg:text-2xl xl:text-2xl p-2 sm:p-2 md:p-4 lg:p-8">
     <div style=" background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6Rod6Zv5NUMyCPUzTpMMcA8Ib4LlDQL6w4g&usqp=CAU') "
-        class=""> <a href="home.html" class="text-2xl p-1.5 sm:text-2xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl
+        class=""> <a href="index.html" class="text-2xl p-1.5 sm:text-2xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl
         sm:p-2 md:p-6 lg:p-16  text-cyan-300 ">home</a>
         <a href="unit1.html" class="text-2xl p-1.5 sm:text-2xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl
         sm:p-2 md:p-6 lg:p-16  text-cyan-300 ">unit 1</a>
